--- a/pages/index.css
+++ b/pages/index.css
@@ -160,3 +160,104 @@
   color: #ffffff;
   margin: 24px 0 0 0;
 }
+
+.reservation {
+  margin: 0 auto;
+  /*Why this does not push my elements to the middle? */
+
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0 120px;
+}
+
+.reservation__title {
+  margin: 0 auto 80px;
+  text-align: center;
+  font-family: Inter;
+  font-style: noraml;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+/*What was this element again? reservation__form form <- BEM re */
+.form {
+  max-width: 385px;
+}
+
+.form__fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form__label {
+  /*to apply margin, it has to be block*/
+  display: block;
+  margin-bottom: 32px;
+
+  font-family: Inter;
+  font-style: noraml;
+  font-weight: 500;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  padding: 0;
+  box-sizing: border-box;
+  /*default border around top edges */
+  margin-top: 8px;
+  height: 60px;
+
+  padding-left: 10px;
+  padding-right: 10px;
+
+  font-family: Inter;
+  font-style: noraml;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+
+.form__button {
+  display: block;
+  margin-bottom: 32px;
+  width: 100%;
+  height: 60px;
+  color: #ffffff;
+  background-color: #2f80ed;
+  border-radius: 4px;
+  opacity: 1;
+
+  font-family: Inter;
+  font-style: noraml;
+  font-weight: 500;
+
+  padding: 0;
+  border: 0;
+  transition: opacity 0.3s ease;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+}
