--- a/pages/index.css
+++ b/pages/index.css
@@ -176,7 +176,7 @@
   margin: 0 auto 80px;
   text-align: center;
   font-family: Inter;
-  font-style: noraml;
+  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -203,7 +203,7 @@
   margin-bottom: 32px;
 
   font-family: Inter;
-  font-style: noraml;
+  font-style: normal;
   font-weight: 500;
 }
 
@@ -243,7 +243,7 @@
   opacity: 1;
 
   font-family: Inter;
-  font-style: noraml;
+  font-style: normal;
   font-weight: 500;
 
   padding: 0;
