--- a/pages/index.css
+++ b/pages/index.css
@@ -225,7 +225,7 @@
   padding-right: 10px;
 
   font-family: Inter;
-  font-style: noraml;
+  font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
